# unify_api

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake.in  cpplint.bash  platform.h  version.cpp.in  version.h  version.h.in
.github/workflows/: android.yml  codestyle.yml  linux.yml  macos.yml  windows.yml
cmdline/: CMakeLists.txt  cmdline.h
cmdline/test/: CMakeLists.txt  test.cpp  test2.cpp
dir/: CMakeLists.txt  dir.cpp  dir.h  dir_test.cpp
dir/test/: CMakeLists.txt  dir_test.cpp
env/: CMakeLists.txt  env.h  env_test.cpp
env/test/: CMakeLists.txt  env_test.cpp
macros/: CMakeLists.txt  has_class_member.h  singleton.h
platform/: CMakeLists.txt  cmd_channel.h  dir.cpp  env.h  platform_define.h  poller.cpp  poller.h  shared_library.cpp
platform/linux/: CMakeLists.txt  cmd_channel-linux.cpp  cmd_channel-linux.h  platform_define-linux.h
platform/test/: CMakeLists.txt  cmd_channel_test.cpp  dir_test.cpp  env_test.cpp  poller_test.cpp
platform/win/: cmd_channel-win.cpp  cmd_channel-win.h  platform_define-win.h
poller/: CMakeLists.txt  poller.cpp  poller.h
shared_library/: CMakeLists.txt  shared_library.cpp  shared_library.h
string_parser/: CMakeLists.txt  string_parser.h  string_parser_test.cpp
string_parser/test/: CMakeLists.txt  string_parser_test.cpp
time/: CMakeLists.txt  duration.cpp  duration.h  rate.cpp  rate.h  time.cpp  time.h  time_test.cpp
time/test/: CMakeLists.txt  time_test.cpp
